# majofitlib

./: .gitignore  LICENSE  Untitled.ipynb  base.py  main.py  optimize.py  pyproject.toml  readme.md  test.ipynb  test1.ipynb
models/: polynomial_two_carrierXY.py
src/majofitlib/: __init__.py  base.py  constants.py  optimize.py  optimizers.py  quantities_and_units.py  units.py
src/majofitlib/forwards/: two_carrier.py
src/majofitlib/models/: polynomial_two_carrier.py
src/majofitlib/models/transport/: polynomial_two_carrier.py
