[project]
name = "majofitlib"
version = "0.0.0"
description = "Common fitting models used in condensed-matter materials laboratories."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
  { name = "ponyofshadows" }
  # Optionally:
  # { name = "ponyofshadows", email = "you@example.com" }
]

keywords = [
  "fitting",
  "curve-fitting",
  "condensed-matter",
  "materials-science",
  "physics",
  "scipy",
  "numpy",
]

classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Mathematics",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]

dependencies = [
  "numpy>=2.0",
  "scipy>=1.11",
  "matplotlib>=3.8",
]

[project.urls]
Homepage = "https://github.com/ponyofshadows/majofitlib"
Source = "https://github.com/ponyofshadows/majofitlib"
Issues = "https://github.com/ponyofshadows/majofitlib/issues"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Assumes a src-layout: src/majofitlib/__init__.py
packages = ["src/majofitlib"]

[dependency-groups]
dev = [
  "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
norecursedirs = ["playground", "dist", "build", ".venv", "__pycache__", ".git"]
